--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <center>
-	<img src="/resume/muzaffar.jpg" alt=Mohammad Muzaffar Hyder>
+	<img src="images/muzaffar.jpg" alt=Mohammad Muzaffar Hyder>
 	<head>
 <h1 style="color:blueviolet;"><em>Mohammad Muzaffar Hyder</em></h1>
 <p>Final year Student at <strong><em>B.M.S College of Engineering</em></strong>in <b>Electronics and Instrumentation Domain</b></p>
