--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<img src="images/muzaffar.jpg" alt=Mohammad Muzaffar Hyder>
 <center>
 	<img src="images/muzaffar.jpg" alt=Mohammad Muzaffar Hyder>
 	<head>
