--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
-	<img src="images/muzaffar.jpg" alt=Mohammad Muzaffar Hyder>
-<center>
-	<img src="images/muzaffar.jpg" alt=Mohammad Muzaffar Hyder>
-	<head>
+	<table>
+		<tr><td>
+			<img src="images/muzaffar.jpg" alt=Mohammad Muzaffar Hyder></td>
+
+<td>	
+<head>
 <h1 style="color:blueviolet;"><em>Mohammad Muzaffar Hyder</em></h1>
 <p>Final year Student at <strong><em>B.M.S College of Engineering</em></strong>in <b>Electronics and Instrumentation Domain</b></p>
 		<title> Mohammad Muzaffar Hyder</title>
 		<meta charset="utf-8">
 		
 	</head>
-	</center>
+			</td>
+		</tr></table>
+	
 	<hr size="4" noshade>
 	<body>
 		<p title=About me>hi there myself muzaffar iam a very intelligent hardworking  smart and charm guy </p>
